# di-Higgs-analysis

./: MyAnalysis.cc
CAFCore/: .gitignore  .gitlab-ci.yml  CAFCoreConfig.cmake.in  CMakeLists.txt  README.md  cafdiagnostics.sh  contributing.md
CAFCore/CAFDocumentation/: equations.tex
CAFCore/CAFDocumentation/cmt/: Makefile.RootCore  getTags.py  htaccess  makeMarkdownDoc.py  makeTagDoc.py  makedoc.py  precompile.RootCore  release_notes.py
CAFCore/CAFxAODUtils/: CMakeLists.txt
CAFCore/CAFxAODUtils/CAFxAODUtils/: Observables.h  TQCPConstituentVectorObservable.h  TQCPDecorationObservable.h  TQContainerSizeObservable.h  TQEventFlaggingAnalysisJob.h  TQEventObservable.icc  TQIParticleDecorationVectorObservable.h  TQIParticleFourVectorVectorObservable.h  TQSGAuxElementDecorationObservable.h  TQToolObservable.h  TQTruthParticleInfoObservable.h  TQxAODUtils.h  TQxAODskimmingAlgorithm.h
CAFCore/CAFxAODUtils/Root/: LinkDef.h  LinkDefTemplate.h  Observables.cxx  TQCPConstituentVectorObservable.cxx  TQCPDecorationObservable.cxx  TQCompositorObservable.cxx  TQContainerSizeObservable.cxx  TQEventFlaggingAnalysisJob.cxx  TQEventObservable.cxx  TQIParticleDecorationObservable.cxx  TQIParticleDecorationVectorObservable.cxx  TQIParticleFourVectorObservable.cxx  TQIParticleFourVectorVectorObservable.cxx  TQSGAuxElementDecorationObservable.cxx  TQSGAuxFlagCheckingObservable.cxx  TQToolObservable.cxx  TQTruthParticleInfoObservable.cxx  TQxAODUtils.cxx  TQxAODskimmingAlgorithm.cxx
CAFCore/CAFxAODUtils/cmt/: Makefile.RootCore  precompile.RootCore
CAFCore/CommonAnalysisHelpers/: CMakeLists.txt
CAFCore/CommonAnalysisHelpers/cmt/: Makefile.RootCore
CAFCore/CommonAnalysisHelpers/python/: common.py  initialize.py  prepare.py  submit.py  visualize.py
CAFCore/CommonAnalysisHelpers/share/: cafDuplicateCleaner.py  cafsubmit
CAFCore/CommonAnalysisHelpers/test/: test_analyze.py  test_pyCut.py
CAFCore/CxAODUtils/: CMakeLists.txt
CAFCore/CxAODUtils/Root/: CxAODReaderAlgorithm.cxx  LinkDef.h
CAFCore/CxAODUtils/cmt/: Makefile.RootCore
CAFCore/CxAODUtils/share/: testReadCxAOD.py
CAFCore/QFramework/: CMakeLists.txt  Makefile
CAFCore/QFramework/QFramework/: TQCompPlotter.h  TQCounter.h  TQCut.h  TQCutflowPrinter.h  TQGridScanObservable.h  TQGridScanPoint.h  TQGridScanResults.h  TQGridScanStyle.h  TQGridScanner.h  TQHistogramUtils.h  TQIteratorTLinkDef.h.add  TQLibrary.h  TQListUtils.h  TQNFBase.h  TQNFCalculator.h  TQNFChainloader.h  TQNFTop0jetEstimator.h  TQNTupleDumperAnalysisJob.h  TQObservable.h  TQPathManager.h  TQROOTPlotter.h  TQSample.h  TQSampleDataReader.h  TQSampleInitializer.h  TQSampleInitializerBase.h  TQSampleVisitor.h  TQSignificanceEvaluator.h  TQStringUtils.h  TQSystematicsHandler.h  TQValue.h  TQVectorAuxObservable.h  TQXSecParser.h
CAFCore/QFramework/Root/: TQAlgorithm.cxx  TQAnalysisAlgorithm.cxx  TQAnalysisSampleVisitor.cxx  TQCompPlotter.cxx  TQConstObservable.cxx  TQCounter.cxx  TQCut.cxx  TQCutflowPrinter.cxx  TQDefaultPlotter.cxx  TQEventIndexObservable.cxx  TQEventlistPrinter.cxx  TQFilterObservable.cxx  TQFolder.cxx  TQGraphMakerAnalysisJob.cxx  TQGridScanObservable.cxx  TQGridScanPoint.cxx  TQGridScanResults.cxx  TQGridScanStyle.cxx  TQGridScanner.cxx  TQHWWPlotter.cxx  TQHistComparer.cxx  TQHistoMakerAnalysisJob.cxx  TQHistogramObservable.cxx  TQHistogramUtils.cxx  TQLibrary.cxx  TQListUtils.cxx  TQMVAObservable.cxx  TQMessageStream.cxx  TQMultiChannelAnalysisSampleVisitor.cxx  TQMultiObservable.cxx  TQNFChainloader.cxx  TQNFManualSetter.cxx  TQNFUncertaintyScaler.cxx  TQNTupleDumperAnalysisJob.cxx  TQNamedTaggable.cxx  TQObservable.cxx  TQPathManager.cxx  TQPlotter.cxx  TQPresenter.cxx  TQROOTPlotter.cxx  (+25 more)
CAFCore/QFramework/cmt/: precompile.RootCore
CAFCore/QFramework/share/: QFramework_template.py  generateBindings.py  generateLocals.py  plot  tqdiff  tqfolder.sublime-syntax  tqfolderdiff  tqmerge  tqpy  tqroot  (+1 more)
CAFCore/SFramework/: CMakeLists.txt  Makefile
CAFCore/docker/: Dockerfile  Dockerfile_skopeo  Dockerfile_standalone  Dockerfile_standalone_base  docker-entrypoint.sh  untag.sh
CAFlwtnn/: .gitignore  CMakeLists.txt  ReadMe.md  example_neural_net.json  example_neural_net_sequential.json
CAFlwtnn/Root/: LinkDef.h  TQlwtnnObservable.cxx
CAFlwtnn/python/: __init__.py
klambdareweighttool/: .gitignore  CMakeLists.txt  README
klambdareweighttool/Root/: hhWeightTool.cxx
klambdareweighttool/cmt/: Makefile.RootCore
klambdareweighttool/data/: DAODRSG_m1100_c20_to_c10.root  DAODRSG_m1200_c20_to_c10.root  DAODRSG_m1300_c20_to_c10.root  DAODRSG_m1400_c20_to_c10.root  DAODRSG_m1500_c20_to_c10.root  DAODRSG_m900_c20_to_c10.root  DAODc10_M1000.root  DAODc10_M1100.root  DAODc10_M1300.root  DAODc10_M1400.root  DAODc10_M1500.root  DAODc10_M2000.root  DAODc10_M2500.root  DAODc10_M500.root  DAODc10_M600.root  DAODc10_M700.root  DAODc20_M1500.root  DAODc20_M2500.root  DAODc20_M400.root  DAODc20_M700.root  RSG_m1300_c20_to_c10.root  RSG_m1500_c20_to_c10.root  RSG_m1600_c20_to_c10.root  RSG_m1800_c20_to_c10.root  RSG_m2250_c20_to_c10.root  RSG_m3000_c20_to_c10.root  RSG_m400_c20_to_c10.root  RSG_m500_c20_to_c10.root  RSG_m800_c20_to_c10.root  SMhh_mhh_raw.root  c10_M1300.root  c10_M1400.root  c10_M1600.root  c10_M400.root  c10_M500.root  c10_M600.root  c20_M1000.root  c20_M1200.root  c20_M1500.root  c20_M1600.root  (+10 more)
klambdareweighttool/hhTruthWeightTools/: hhWeightTool.h
klambdareweighttool/post-production/: BM_HEFT_reweight.cxx  HEFT_reweight.cxx  Makefile  README.md  ReWeight_HEFT.py  ReWeight_klambda.py  kl_dict.py  klambda_HEFT_reweight.cxx  klambda_reweight.cxx
klambdareweighttool/scripts/: compHists.py  hhReweightAnalysisLvl.C  hhTools.py  makeHists.py  makeHists.sh  makeHistsFromDAOD.py  makeMhhMassTH1.py  makeWeights.py  makeWeightsScaled.py  mhh_all_Kfactors_20GeV.txt  mhh_born_20GeV.txt  mhh_ftapprox_13TeV_20GeV.txt  mhh_full_13TeV_20GeV.txt  plot4jTrigEff.py  plot4jTrigEff.sh  plothPt.py  procDAOD.py  procHHNtuple.py  procHists.py  procXhhMiniNtuple.py  pth_ftapprox_13TeV_20GeV.txt  pth_full_13TeV_20GeV.txt  rucioMakeList.py  runplothPt.sh
(+964 files in other folders)
